--- a/app/build.gradle
+++ b/app/build.gradle
@@ -313,7 +313,7 @@ dependencies {
     compile files('libs/open_sdk_r5781.jar')
     testCompile files('libs/javassist.jar')
     //    compile 'com.cylan.iot.sdk:sdkLib:213'
-    compile(name: 'sdkLib-debug', ext: 'aar')
+//    compile(name: 'sdkLib-debug', ext: 'aar')
     //谷歌推送
     compile files('libs/MiPush_SDK_Client_3_2_2.jar')
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
@@ -348,6 +348,9 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
+    compile 'com.lzy.net:okgo:2.1.4'        //可以单独使用，不需要依赖下方的扩展包
+    compile 'com.lzy.net:okrx:0.1.2'        //RxJava扩展支持，根据需要添加
+    compile 'com.lzy.net:okserver:1.1.3'
 }
 
 //谷歌推送
