--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,13 +101,23 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="BUGLY_APPID"
+            android:value="${BUGLY_APPID}>" />
+        <!-- 配置APP版本号 -->
+        <meta-data
+            android:name="BUGLY_APP_VERSION"
+            android:value="${BUGLY_APP_VERSION}" />
+        <!-- 配置APP渠道号 -->
+        <meta-data
+            android:name="BUGLY_APP_CHANNEL"
+            android:value="${BUGLY_APP_CHANNEL}" />
+
+
         <!-- 华为推送 Start -->
         <meta-data
             android:name="com.huawei.hms.client.appid"
             android:value="${HW_APP_ID}" />
-        <meta-data
-            android:name="BUGLY_APPID"
-            android:value="\\ 900026046" />
         <meta-data
             android:name="vId"
             android:value="${VID}" />
