--- a/app/build.gradle
+++ b/app/build.gradle
@@ -208,7 +208,7 @@ android {
                                     "mtaAppKey"          : "ATQ1JV694AKT",
                                     "weChatAppKey"       : "wx382033a16e5cc4a5",
                                     "sinaAppKey"         : "\\ 1821035549",
-                                    "SERVER"             : "test1.jfgou.com:443",
+                                    "SERVER"             : "yun.jfgou.com:443",
                                     "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
                                     "GCM_APP_ID"         : "\\ 985304692675",
                                     "ApplicationId"      : applicationId,
