--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
 
         <meta-data
             android:name="BUGLY_APPID"
-            android:value="${BUGLY_APPID}>" />
+            android:value="${BUGLY_APPID}" />
         <!-- 配置APP版本号 -->
         <!--<meta-data-->
             <!--android:name="BUGLY_APP_VERSION"-->
