1.广告播放完毕,跳转响应页面.2.用JSoup解析googlePlay_AppVersion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,29 +173,6 @@ android {
                                     "BUGLY_APP_CHANNEL"  : "cylan"
             ]
         }
-        _test1 {
-            applicationId "com.cylan.jiafeigou"
-            versionName vName
-            versionCode vCode
-            manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.hms.update.provider",
-                                    "HW_APP_ID"          : "\\ 10515998",
-                                    "VID"                : "\\ 0001",
-                                    "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
-                                    "qqAppKey"           : "\\ 1103156296",
-                                    "mtaAppKey"          : "Aqc1103156296",
-                                    "weChatAppKey"       : "wx3081bcdae8a842cf",
-                                    "sinaAppKey"         : "\\ 1315129656",
-                                    "SERVER"             : "test1.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
-                                    "GCM_APP_ID"         : "\\ 985304692675",
-                                    "ApplicationId"      : applicationId,
-                                    "XiaoMiAppId"        : "\\ 5241757040488",
-                                    "XiaoMiAppKey"       : "geNCiqvDm6AohEZ6B+HzJw==",
-                                    "BUGLY_APPID"        : "2e94bf542f",
-                                    "BUGLY_APP_VERSION"  : versionName,
-                                    "BUGLY_APP_CHANNEL"  : "cylan"
-            ]
-        }
         _doby {
             applicationId "com.cylan.jiafeigou.zhongxing"
             versionName vName
@@ -217,53 +194,6 @@ android {
                                     "BUGLY_APPID"        : "2e94bf542f",
                                     "BUGLY_APP_VERSION"  : versionName,
                                     "BUGLY_APP_CHANNEL"  : "doby"
-            ]
-        }
-        _cell_c {
-            applicationId "com.cylan.jiafeigou.cell_c"
-            versionName vName
-            versionCode vCode
-            manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.cell_c.hms.update.provider",
-                                    "HW_APP_ID"          : "xxx",
-                                    "VID"                : "\\  0060",
-                                    "VKEY"               : "doLUb8CEObqCKQpA05ytKKHPu5Q3SvYX",
-                                    "qqAppKey"           : "",
-                                    "mtaAppKey"          : "Aqc1103156296",
-                                    "weChatAppKey"       : "",
-                                    "sinaAppKey"         : "",
-                                    "SERVER"             : "yun.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
-                                    "GCM_APP_ID"         : "\\ 985304692675",
-                                    "ApplicationId"      : applicationId,
-                                    "XiaoMiAppId"        : "xxx",
-                                    "XiaoMiAppKey"       : "xxx",
-                                    "BUGLY_APPID"        : "2e94bf542f",//
-                                    "BUGLY_APP_VERSION"  : versionName,
-                                    "BUGLY_APP_CHANNEL"  : "cylan"
-
-            ]
-        }
-        _yf {
-            applicationId "com.cylan.jiafeigou.yf"
-            versionName vName
-            versionCode vCode
-            manifestPlaceholders = ["HW_PUSH_AUTHORITIES": "com.cylan.jiafeigou.hms.update.provider",
-                                    "HW_APP_ID"          : "\\ 10515998",
-                                    "VID"                : "\\ 0001",
-                                    "VKEY"               : "Z5SYDbLV44zfFGRdAgFQhH62fAnIqf3G",
-                                    "qqAppKey"           : "\\ 1103156296",
-                                    "mtaAppKey"          : "Aqc1103156296",
-                                    "weChatAppKey"       : "wx3081bcdae8a842cf",
-                                    "sinaAppKey"         : "\\ 1315129656",
-                                    "SERVER"             : "yf.jfgou.com:443",
-                                    "FACEBOOK_APP_ID"    : "\\ 1866682200216878",
-                                    "GCM_APP_ID"         : "\\ 985304692675",
-                                    "ApplicationId"      : applicationId,
-                                    "XiaoMiAppId"        : "\\ 5241757040488",
-                                    "XiaoMiAppKey"       : "geNCiqvDm6AohEZ6B+HzJw==",
-                                    "BUGLY_APPID"        : "2e94bf542f",//
-                                    "BUGLY_APP_VERSION"  : versionName,
-                                    "BUGLY_APP_CHANNEL"  : "cylan"
             ]
         }
     }
@@ -386,8 +316,9 @@ dependencies {
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'org.jsoup:jsoup:1.9.2'
 }
 
 //谷歌推送
