--- a/app/build.gradle
+++ b/app/build.gradle
@@ -387,6 +387,7 @@ dependencies {
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'org.jsoup:jsoup:1.9.2'
 }
 
 //谷歌推送
