--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
         applicationId "com.cylan.jiafeigou"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        dataBinding.enabled true
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -59,9 +60,6 @@ android {
         }
 
 
-    }
-    dataBinding {
-        enabled true
     }
     sourceSets.main {
         jniLibs.srcDir 'src/main/libs' //set .so files location to libs instead of jniLibs
@@ -342,7 +340,6 @@ dependencies {
     compile(name: rootProject.ext.facebookSDK, ext: 'aar') {
         transitive = true
     }
-    compile(name: 'constraint-layout-1.0.2', ext: 'aar')
     //aar通用依赖，不需要指定名字
     compile files('libs/open_sdk_r5781.jar')
     testCompile files('libs/javassist.jar')
@@ -387,6 +384,8 @@ dependencies {
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
 
 //谷歌推送
