--- a/app/build.gradle
+++ b/app/build.gradle
@@ -388,6 +388,7 @@ dependencies {
     //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.romandanylyk:pageindicatorview:0.2.0'
 }
 
 //谷歌推送
