--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ task clean(type: Delete) {
 
 
 ext {
-    //update by hunt 2016-07-27 ordered by lzp
+    //update by hds 2016-07-27 ordered by lzp
     minSdkVersion = 19
     compileSdkVersion = 25
     targetSdkVersion = 23
