--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
         // in the individual module build.gradle files
         //谷歌推送
         classpath 'com.google.gms:google-services:3.0.0'
+
+        classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
     }
 }
 
@@ -45,7 +47,7 @@ ext {
     minSdkVersion = 19
     compileSdkVersion = 25
     targetSdkVersion = 23
-    buildToolsVersion = '23.0.3'
+    buildToolsVersion = '25.0.0'
     ////////////////////////////////////////////////////
     testRobolectric = 'org.robolectric:robolectric:3.1.2'
     testAssertj = 'com.squareup.assertj:assertj-android:1.1.0'
