分享管理,有 bug ,待完善

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -656,7 +656,14 @@
             android:name=".n.view.panorama.PanoramaDetailActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
-            android:theme="@style/CamActivityTheme" />
+            android:theme="@style/CamActivityTheme">
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
+
 
         <service
             android:name=".n.engine.FirmwareCheckerService"
