--- a/app/build.gradle
+++ b/app/build.gradle
@@ -273,6 +273,7 @@ dependencies {
     compile(name: 'constraint-layout-1.0.2', ext: 'aar')
     //aar通用依赖，不需要指定名字
     compile files('libs/open_sdk_r5781.jar')
+    compile files('libs/mid-sdk-2.3.jar')
     testCompile files('libs/javassist.jar')
     //    compile 'com.cylan.iot.sdk:sdkLib:213'
     compile(name: 'sdkLib-debug', ext: 'aar')
@@ -319,6 +320,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.romandanylyk:pageindicatorview:0.2.0'
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
 
 //谷歌推送
