--- a/app/build.gradle
+++ b/app/build.gradle
@@ -268,6 +268,8 @@ dependencies {
     compile(name: rootProject.ext.facebookSDK, ext: 'aar') {
         transitive = true
     }
+    //不要使用 compile 'xxx-constraint-layout',打包机失败.
+    compile(name: 'constraint-layout-1.0.2', ext: 'aar')
     //aar通用依赖，不需要指定名字
     compile files('libs/open_sdk_r5781.jar')
     compile files('libs/mid-sdk-2.3.jar')
@@ -312,14 +314,10 @@ dependencies {
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
-    //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.romandanylyk:pageindicatorview:0.2.0'
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
-//    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
 }
 
 //谷歌推送
