--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,12 @@ android {
             jniLibs.srcDirs = ['libs']
             aidl.srcDirs = ['src/main/aidl']
         }
+        _doby {
+            java.srcDirs = ['src/_doby/java']
+        }
+        _cell_c {
+            java.srcDirs = ['src/_cell_c/java']
+        }
     }
     testOptions {
         unitTests.returnDefaultValues = true
