--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,7 +129,7 @@
         <meta-data
             android:name="qqAppId"
             android:value="${qqAppId}" />
-         <meta-data
+        <meta-data
             android:name="qqAppKey"
             android:value="${qqAppKey}" />
 
@@ -301,7 +301,7 @@
             而给用户视觉效果就在当前界面。
         -->
         <activity
-            android:name=".wxapi.WXEntryActivity"
+            android:name="${ApplicationId}.wxapi.WXEntryActivity"
             android:exported="true"
             android:theme="@style/wechat_share" />
         <activity
