更新twitter appkey_appsecrete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -171,6 +171,7 @@ android {
                                     "BUGLY_APP_VERSION"  : versionName,
                                     "BUGLY_APP_CHANNEL"  : "cylan",
                                     "TWITTER_APP_KEY"    : "kCEeFDWzz5xHi8Ej9Wx6FWqRL",
+                                    "TWITTER_APP_SECRET" : "Ih4rUwyhKreoHqzd9BeIseAKHoNRszi2rT2udlMz6ssq9LeXw5",
                                     "FACEBOOK_APP_KEY"   : "fb1866682200216878"
             ]
         }
@@ -196,6 +197,7 @@ android {
                                     "BUGLY_APP_VERSION"  : versionName,
                                     "BUGLY_APP_CHANNEL"  : "doby",
                                     "TWITTER_APP_KEY"    : "gSbX9IzCQ4w4xaE1igwAqrX6M",
+                                    "TWITTER_APP_SECRET" : "85wI4lQRuZiLr7WMtfy1brkHtciw0T9648EbuVyr7hfFC9EIk9",
                                     "FACEBOOK_APP_KEY"   : "fb1770285686596084"
             ]
         }
@@ -221,6 +223,7 @@ android {
                                     "BUGLY_APP_VERSION"  : versionName,
                                     "BUGLY_APP_CHANNEL"  : "cell_c",
                                     "TWITTER_APP_KEY"    : "",
+                                    "TWITTER_APP_SECRET" : "",
                                     "FACEBOOK_APP_KEY"   : ""
             ]
         }
