--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,12 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            // 设置支持的SO库架构
+            // 设置支持的CPU架构
             abiFilters 'armeabi-v7a'//, 'x86'//, 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
-
-
+        jackOptions {
+            enabled true
+        }
     }
     dataBinding {
         enabled true
