--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'project-report'
 //apply plugin: 'io.fabric'
@@ -55,9 +55,6 @@ android {
         ndk {
             // 设置支持的CPU架构
             abiFilters 'armeabi-v7a'//, 'x86'//, 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-        }
-        jackOptions {
-            enabled true
         }
     }
     dataBinding {
