--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
 //        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.android.tools.build:gradle:2.3.2'
-//        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
 //        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:1.0.8'
         // NOTE: Do not place your application dependencies here; they belong
