--- a/app/build.gradle
+++ b/app/build.gradle
@@ -298,7 +298,6 @@ dependencies {
     compile(name: rootProject.ext.facebookSDK, ext: 'aar') {
         transitive = true
     }
-    compile(name: 'constraint-layout-1.0.2', ext: 'aar')
     //aar通用依赖，不需要指定名字
     compile files('libs/open_sdk_r5781.jar')
     testCompile files('libs/javassist.jar')
@@ -313,12 +312,13 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
+    //可以单独使用，不需要依赖下方的扩展包
+    //RxJava扩展支持，根据需要添加
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
-    //可以单独使用，不需要依赖下方的扩展包
-    //RxJava扩展支持，根据需要添加
+
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
@@ -342,10 +342,10 @@ dependencies {
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okrx:0.1.2'
     compile 'com.lzy.net:okserver:1.1.3'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'org.jsoup:jsoup:1.9.2'
-
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 }
 
 //谷歌推送
