--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,19 +100,17 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="BUGLY_APPID"
             android:value="${BUGLY_APPID}" />
         <!-- 配置APP版本号 -->
-        <!--<meta-data-->
-        <!--android:name="BUGLY_APP_VERSION"-->
-        <!--android:value="${BUGLY_APP_VERSION}" />-->
+        <!-- <meta-data -->
+        <!-- android:name="BUGLY_APP_VERSION" -->
+        <!-- android:value="${BUGLY_APP_VERSION}" /> -->
         <!-- 配置APP渠道号 -->
         <meta-data
             android:name="BUGLY_APP_CHANNEL"
             android:value="${BUGLY_APP_CHANNEL}" />
-
 
         <!-- 华为推送 Start -->
         <meta-data
@@ -341,7 +339,7 @@
         <meta-data
             android:name="TWITTER_APP_SECRET"
             android:value="${TWITTER_APP_SECRET}" />
-        <!--注意fb前缀-->
+        <!-- 注意fb前缀 -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="fb${FACEBOOK_APP_KEY}" />
@@ -656,6 +654,12 @@
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
             android:theme="@style/CamActivityTheme" />
+        <activity
+            android:name=".n.view.activity.MineInfoActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
