--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'project-report'
 ////多渠道包没人愿意维护多渠道包，算了，删了吧。
 apply plugin: 'packer'
 
+apply plugin: 'com.github.typ0520.fastdex'
+
 //从version.properties中读取versionName
 def vCode
 def vName
